--- a/hire.html
+++ b/hire.html
@@ -206,6 +206,56 @@
                     </div>
                 </div>
             </section>             
+            <section class="contact" id="call">
+                <div class="contact__container ccont">
+                    <h2 class="ccont__title">Связаться с нами</h2>
+                    <div class="ccont__content">
+                        <div class="ccont__content-text ctext">
+                            <h3 class="ctext__text">Оставьте заявку и наш менеджер свяжется с вами в <span class="hero">ближайшее время</span></h3>
+                        </div>
+                        <div class="ccont__content-form cform">
+                            <div class="cform__form">
+                                
+                                <input type="text" placeholder="ФИО" class="cform__form-input">
+                                <input type="text" placeholder="Телефон" class="cform__form-input">
+                                <input type="text" placeholder="Фамилия" class="cform__form-input">
+                                <input type="text" placeholder="Предполагаемый бюджет" class="cform__form-input">
+                                <input type="text" placeholder="E-mail" class="cform__form-input">
+                                <input type="text" placeholder="Ссылка на Linkedin (необязательно)" class="cform__form-input">
+                                <input type="text" placeholder="Комментарий" class="cform__form-input message">
+                            </div>
+                            <a href="#!" class="cform__button">
+                                <h3 class="cform__button-text">Отправить заявку</h3>
+                                <img src="assets/img/icons/arrow.svg" alt="" class="cgorm__button-arrow">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact__footer cfoot">
+                    <div class="cfoot__upper cfup">
+                        <div class="cfup__mail">
+                            <h3 class="cfup__mail-title">Для сотрудничества:</h3>
+                            <a href="#!" class="cfup__mail-mail">info@gthrees.com</a>
+                        </div>
+                        <div class="cfup__subscribe">
+                            <a href="#!" class="cfup__subscribe-link">Подписаться</a>
+                            <a href="#!" class="cfup__subscribe-number">+375(17)252-22-25</a>
+                        </div>
+                        <div class="cfup__sell">
+                            <h3 class="cfup__sell-title">Отдел продаж:</h3>
+                            <a href="#!" class="cfup__sell-mail">sales@gthrees.com</a>
+                        </div>
+                    </div>
+                    <div class="contact__bottom cfbot">
+                        <h3 class="cfbot__text">© 2023, GTHREES</h3>
+                        <a href="#!" class="cfbot__likeit">
+                            <h3 class="cfbot__likeit-text">Разработано в</h3>
+                            <img src="assets/img/icons/likeIt.svg" alt="" class="cfbot__likeit-icon">
+                        </a>
+                    </div>
+                    <img src="assets/img/icons/title-dark.svg" alt="" class="cfoot__title">
+                </div>
+            </section>
             </div>
         </main>
         <footer class="application__footer footer">
