--- a/index.html
+++ b/index.html
@@ -250,35 +250,35 @@
                         </div>
                         <div class="cmp__map">
                             <div class="cmp__map-dot dot dot1">
-                                <div class="dot__text dot1__text">
+                                <div class="dot__text dot1__text mapleft">
                                     <h3 class="dot__text-title dot1__text-title">Загрузили</h3>
                                     <p class="dot__text-subtitle dot1__text-subtitle">96 т памперсов</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot1__image">
                             </div>
                             <div class="cmp__map-dot dot dot2">
-                                <div class="dot__text dot2__text">
+                                <div class="dot__text dot2__text mapright">
                                     <h3 class="dot__text-title dot2__text-title">Доставили</h3>
                                     <p class="dot__text-subtitle dot2__text-subtitle">145 т пильменей</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot2__image">
                             </div>
                             <div class="cmp__map-dot dot dot3">
-                                <div class="dot__text dot3__text">
+                                <div class="dot__text dot3__text mapleft">
                                     <h3 class="dot__text-title dot3__text-title">Получили</h3>
                                     <p class="dot__text-subtitle dot3__text-subtitle">Положительный отзыв</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot3__image">
                             </div>
                             <div class="cmp__map-dot dot dot4">
-                                <div class="dot__text dot4__text">
+                                <div class="dot__text dot4__text mapright">
                                     <h3 class="dot__text-title dot4__text-title">Отследили</h3>
                                     <p class="dot__text-subtitle dot4__text-subtitle">Местоположение груза</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot5__image">
                             </div>
                             <div class="cmp__map-dot dot dot5">
-                                <div class="dot__text dot5__text">
+                                <div class="dot__text dot5__text mapleft">
                                     <h3 class="dot__text-title dot5__text-title">Доставили</h3>
                                     <p class="dot__text-subtitle dot5__text-subtitle">145 т пильменей</p>
                                 </div>
@@ -349,8 +349,8 @@
                 <section class="we">
                     <div class="we__container wecont">
                         <h2 class="wecont__title">Почему мы</h2>
-                        <div class="wecont__cards">
-                            <div class="wecont__cards-card wcard">
+                        <div class="wecont__cards wcards">
+                            <div class="wecont__cards-card wcard wcard1">
                                 <div class="wcard__nothover">
                                     <h3 class="wcard__nothover-title">Гарантии сохранности</h3>
                                     <div class="wcard__nothover-picture">
@@ -367,7 +367,7 @@
                                         им приоритет в работе.</p>
                                 </div>
                             </div>
-                            <div class="wecont__cards-card wcard cardleft">
+                            <div class="wecont__cards-card wcard2 wcard cardleft">
                                 <div class="wcard__nothover">
                                     <h3 class="wcard__nothover-title">Экологические стандарты</h3>
                                     <div class="wcard__nothover-picture">
@@ -504,7 +504,7 @@
                             <div class="facont__items-accordeon accord">
                                 <a href="" class="accord__title aitem1">
                                     <h3 class="accord__title-text">Как застрахован груз на международных перевозках?</h3>
-                                    <img src="assets/img/icons/arrow.svg" alt="" class="accord__title-icon">
+                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="accord__title-icon">
                                     
                                 </a>
                                 <div class="accord__info ainfo1">
@@ -518,7 +518,7 @@
                             <div class="facont__items-accordeon accord">
                                 <a href="" class="accord__title aitem1">
                                     <h3 class="accord__title-text">Как застрахован груз на международных перевозках?</h3>
-                                    <img src="assets/img/icons/arrow.svg" alt="" class="accord__title-icon">
+                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="accord__title-icon">
                                 </a>
                                 <div class="accord__info ainfo2">
                                     <h3 class="accord__info-text">
@@ -531,7 +531,7 @@
                             <div class="facont__items-accordeon accord">
                                 <a href="" class="accord__title aitem1">
                                     <h3 class="accord__title-text">Как застрахован груз на международных перевозках?</h3>
-                                    <img src="assets/img/icons/arrow.svg" alt="" class="accord__title-icon">
+                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="accord__title-icon">
                                 </a>
                                 <div class="accord__info ainfo3">
                                     <h3 class="accord__info-text">
@@ -544,7 +544,7 @@
                             <div class="facont__items-accordeon accord">
                                 <a href="" class="accord__title aitem1">
                                     <h3 class="accord__title-text">Как застрахован груз на международных перевозках?</h3>
-                                    <img src="assets/img/icons/arrow.svg" alt="" class="accord__title-icon">
+                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="accord__title-icon">
                                 </a>
                                 <div class="accord__info ainfo4">
                                     <h3 class="accord__info-text">
