--- a/company.html
+++ b/company.html
@@ -172,35 +172,35 @@
                     <div class="company__container cmp">
                         <div class="cmp__map">
                             <div class="cmp__map-dot dot dot1">
-                                <div class="dot__text dot1__text">
+                                <div class="dot__text dot1__text mapleft">
                                     <h3 class="dot__text-title dot1__text-title">Загрузили</h3>
                                     <p class="dot__text-subtitle dot1__text-subtitle">96 т памперсов</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot1__image">
                             </div>
                             <div class="cmp__map-dot dot dot2">
-                                <div class="dot__text dot2__text">
+                                <div class="dot__text dot2__text mapright">
                                     <h3 class="dot__text-title dot2__text-title">Доставили</h3>
                                     <p class="dot__text-subtitle dot2__text-subtitle">145 т пильменей</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot2__image">
                             </div>
                             <div class="cmp__map-dot dot dot3">
-                                <div class="dot__text dot3__text">
+                                <div class="dot__text dot3__text mapleft">
                                     <h3 class="dot__text-title dot3__text-title">Получили</h3>
                                     <p class="dot__text-subtitle dot3__text-subtitle">Положительный отзыв</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot3__image">
                             </div>
                             <div class="cmp__map-dot dot dot4">
-                                <div class="dot__text dot4__text">
+                                <div class="dot__text dot4__text mapright">
                                     <h3 class="dot__text-title dot4__text-title">Отследили</h3>
                                     <p class="dot__text-subtitle dot4__text-subtitle">Местоположение груза</p>
                                 </div>
                                 <img src="assets/img/icons/dot.svg" alt="" class="dot__image dot5__image">
                             </div>
                             <div class="cmp__map-dot dot dot5">
-                                <div class="dot__text dot5__text">
+                                <div class="dot__text dot5__text mapleft">
                                     <h3 class="dot__text-title dot5__text-title">Доставили</h3>
                                     <p class="dot__text-subtitle dot5__text-subtitle">145 т пильменей</p>
                                 </div>
@@ -208,6 +208,7 @@
                             </div>
                             <img src="assets/img/icons/map.svg" alt="Изображение карты мира" class="cmp__map-map">
                         </div>
+
                     </div>
                 </section>
                 <section class="managment">
