--- a/hire.html
+++ b/hire.html
@@ -16,19 +16,42 @@
     <div class="application__template">
         <header class="application__header header" id="header">
             <div class="header__container container nav">
-                <a href="#!" class="nav__logo">
+                <a href="/index.html" class="nav__logo">
                     <img src="/assets/img/icons/logo.svg" alt="Логотип GTHREES" class="nav__logo-icon">
                 </a>
+                <a href="/index.html" class="nav__mobile">
+                    <img src="/assets/img/icons/logo-mobile.svg" alt="Логотип GTHREES" class="nav__logo-icon">
+                </a>
                 <ul class="nav__menu">
-                    <li class="nav__menu-item navitem">
-                        <a href="" class="navitem__item">
-                            <span class="navitem__item-text">Наши услуги</span>
-                            <img src="assets/img/icons/arrow-lng.svg" alt="" class="navitem__item-image">
+                    <li class="nav__menu-item navitem serve">
+                        <a href="#!" class="navitem__item serve__item">
+                            <span class="navitem__item-text serve__item-text">Наши услуги</span>
+                            <img src="assets/img/icons/arrow-lng.svg" alt="" class="navitem__item-image serve__item-image">
                         </a>
-
+                        <ul class="serve__dropdown">
+                            <li class="serve__dropdown-item">
+                                <a href="/services.html" class="serve__dropdown-item--link">Авиаперевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="/services.html" class="serve__dropdown-item--link">Автомобильные перевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="/services.html" class="serve__dropdown-item--link">Мультимодальные перевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="/services.html" class="serve__dropdown-item--link">Железнодорожные перевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="/services.html" class="serve__dropdown-item--link">Перевозки тяжеловесных и негабаритных грузов</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="/services.html" class="serve__dropdown-item--link">Перевозки опасных грузов</a>
+                            </li>
+                        </ul>
                     </li>
+                    
                     <li class="nav__menu-item navitem">
-                        <a href="" class="navitem__item">Контакты</a>
+                        <a href="/contacts.html" class="navitem__item">Контакты</a>
                     </li>
                     <li class="nav__menu-item navitem">
                         <a href="tel:375295462567" class="navitem__item">+375(29)546-25-67</a>
@@ -49,7 +72,52 @@
         </header>
         <main class="application__main main" id="main">
             <div class="main__content" id="main-content">
-                
+                <section class="servgen">
+                    <div class="servgen__container servcompany">
+
+                        <div class="servcompany__bottom cbot">
+                            <div class="cbot__container ccont">
+                                <div class="ccont__desc">
+                                    <div class="ccont__desc-subtitle effective">
+                                        <h2 class="effective__title">Вакансии</h2>
+                                        <p class="effective__text">Среди наших клиентов существует постоянная потребность в доставке грузов авиасообщением. Поэтому для оказания полного комплекса логистических услуг мы решили открыть направление авиаперевозок.</p>
+                                    </div>
+                                </div>
+                                <div class="ccont__buttons cbut">
+                                    <div class="cbut__social">
+                                        <a href="#!" class="cbut__social-links">FACEBOOK</a>
+                                        <a href="#!" class="cbut__social-links">INSTAGRAM</a>
+                                        <a href="#!" class="cbut__social-links">LINKEDIN</a>
+                                    </div>
+                                    <div class="cbut__messenger">
+                                        <a href="#!" class="cbut__mseenger-link">
+                                            <img src="assets/img/icons/whatsapp.svg" alt="Значок whatsapp"
+                                                class="cbut__messenger-link--icon">
+                                        </a>
+                                        <a href="#!" class="cbut__mseenger-link">
+                                            <img src="assets/img/icons/viber.svg" alt="Значок viber"
+                                                class="cbut__messenger-link--icon">
+                                        </a>
+                                        <a href="#!" class="cbut__mseenger-link">
+                                            <img src="assets/img/icons/skype.svg" alt="Значок skype"
+                                                class="cbut__messenger-link--icon">
+                                        </a>
+                                        <a href="#!" class="cbut__mseenger-link">
+                                            <img src="assets/img/icons/telegram.svg" alt="Значок telegram"
+                                                class="cbut__messenger-link--icon">
+                                        </a>
+
+
+
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </section>       
             <section class="hire">
                 <div class="hire__container hicont">
                     <div class="hicont__items">
